# capybara

./: .gitignore  ChangeLog.md  Makefile  README.md  all.js  app.cabal  capybara.cabal  default.nix  out.frefs.js  out.frefs.json  out.js  out.stats  package.yaml  shell.nix  styles.css
app/: Main.hs
backend/: GraphReduction.hs  Lexer.hs  Parser.hs
frontend/: Layout.hs  Main.hs  Model.hs  UpdateModel.hs  ViewModel.hs
result-webpage/: all.js  index.html  lib.js  out.frefs.js  out.frefs.json  out.js  out.stats  styles.css
src/: Frontend.hs  GraphReduction.hs  Layout.hs  Lexer.hs  Main.hs  Model.hs  Parser.hs  UpdateModel.hs  ViewModel.hs
static/: index.html  styles.css
