name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:
    Main.hs
  hs-source-dirs:
    frontend, backend
  build-depends:
    base, miso, containers, transformers, text
  if !impl(ghcjs)
    build-depends:
       jsaddle, jsaddle-warp, transformers, warp, websockets
  default-language:
     Haskell2010
  default-extensions:
     InstanceSigs, OverloadedStrings, NamedFieldPuns