name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:
    Main.hs
  hs-source-dirs:
    src
  build-depends:
    base, miso, containers, transformers, text, lens
  if !impl(ghcjs)
    build-depends:
       jsaddle, jsaddle-warp, transformers, wai-app-static
  default-language:
     Haskell2010
  default-extensions:
     InstanceSigs, OverloadedStrings, NamedFieldPuns, LambdaCase, TemplateHaskell, BlockArguments, FlexibleInstances